migrate functional tests to junit 5 (#1815)
* migrate functional tests to junit 5

* checkstyle

* fix tests

* run cdam scenarios

* Bumping chart version/ fixing aliases

* change qualifier

* restore whitelist for xui webapp

* restore whitelist for xui webapp

* fix tests

* checkstyle

* Revert "run cdam scenarios"

This reverts commit e526a693d33d56a4d6d6ca9cfc0102eebd718060.

* Update Chart.yaml

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>
Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>